examples/sample-product-chart/chart-test/reports/run-curated-live-20260602-234624-95262/scenario-service-mesh-istio-ingress-gateway-basic-20260602-235844/artifacts/manifests/istio-gateways.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: Gateway
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"Gateway","metadata":{"annotations":{},"name":"sample-igw","namespace":"sample"},"spec":{"selector":{"istio":"ingressgateway"},"servers":[{"hosts":["sample.test.local"],"port":{"name":"http","number":80,"protocol":"HTTP"}}]}}
    creationTimestamp: "2026-06-03T03:59:26Z"
    generation: 1
    name: sample-igw
    namespace: sample
    resourceVersion: "674"
    uid: 363f85b1-c733-4598-9ccc-f47006ce593b
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - sample.test.local
      port:
        name: http
        number: 80
        protocol: HTTP
kind: List
metadata:
  resourceVersion: ""
